--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,15 @@ body {
     background-color: #045de9;
     background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#weather_icon {
+    width: 55%;
+    height: auto;
+}
